# windows_unlock

./: .gitignore  README.md  go.mod  go.sum
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/singu/proximityunlock/: BootReceiver.kt  MainActivity.kt  Protocol.kt  SecureStore.kt  UnlockService.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
android/app/src/main/res/values/: colors.xml  styles.xml
android/app/src/test/java/com/singu/proximityunlock/: ProtocolTest.kt
cmd/ble-probe/: main_windows.go
cmd/installer/: main_windows.go
cmd/installer/payload/: .keep
cmd/proximity-agent/: main_windows.go
cmd/proximity-service/: main_windows.go
cmd/proximityctl/: main_windows.go
cmd/setup/: main_windows.go
desktop/: README.md  index.html  package-lock.json  package.json
desktop/src/: App.tsx  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: AppHeader.tsx  CalibrationDialog.tsx  ConfirmDialog.tsx  ConnectionVisual.tsx  DevicesPage.tsx  HeroStatus.tsx  Icon.tsx  LogsPage.tsx  ParameterDialog.tsx  SecurityTimeline.tsx  SettingsPage.tsx  SignalChart.tsx  ThresholdEditor.tsx  UnlockSettings.tsx
desktop/src/hooks/: useServiceStatus.ts
desktop/src/lib/: backend.ts  format.ts
docs/: BUILD.md  PROTOCOL.md  SECURITY.md
internal/authorize/: authorize.go  authorize_test.go
internal/ble/: stub.go  transport.go  winrt.go
internal/config/: config.go  config_test.go
internal/coordinator/: coordinator.go  coordinator_test.go
internal/ipc/: auth.go  auth_test.go  event_windows.go  event_windows_test.go  messages.go  server_windows.go
internal/protocol/: advertisement.go  constants.go  crypto.go  fragment.go  messages.go  pairing.go  pairing_wire.go  protocol_test.go  replay.go
internal/proximity/: state.go  state_test.go
internal/secret/: lsa_windows.go  memory.go  store.go
internal/wincred/: prompt_windows.go
internal/windowskey/: cng_windows.go  cng_windows_test.go  public.go
internal/winsession/: session_windows.go
internal/winshell/: message_windows.go  open_windows.go
native/ble-broker/: CMakeLists.txt
native/ble-broker/src/: ble_broker.cpp  ble_broker.h  probe.cpp
native/credential-provider/: CMakeLists.txt
native/credential-provider/src/: credential_provider.cpp  credential_provider.def  credential_provider_probe.cpp
scripts/: build-android-unsigned.ps1  build-personal-apk.ps1  build.ps1  diagnose-ble-elevated.ps1  enable-unlock.ps1  install.ps1  pair-connected-android.ps1  recover.ps1  reset-bluetooth-adapter.ps1  restart-ble-stack.ps1  restart-proximity-service.ps1  test.ps1  uninstall.ps1  update-installed.ps1
