[package]
name = "proximity-unlock-desktop"
version = "0.2.0"
description = "蓝牙解锁 Windows 桌面控制中心"
authors = ["Singu"]
edition = "2024"

[lib]
name = "proximity_unlock_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
time = { version = "0.3", features = ["parsing"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_System_RemoteDesktop", "Win32_System_Shutdown", "Win32_System_Threading", "Win32_UI_Shell"] }
winreg = "0.55"
